--- a/src/assets/Forms.scss
+++ b/src/assets/Forms.scss
@@ -5,7 +5,24 @@
     display: flex;
     flex-flow: column;
     margin: 20px;
+    border: solid rgb(172, 164, 164) 1px;
+    padding: 20px;
+    border-radius: 5px;
     input{
         margin-bottom: 5px;
+    }
+    span{
+        font-size: 14px;
+    }
+
+    label{
+        display: flex;
+        flex-flow: column;
+        margin-top: 5px;
+        margin-bottom: 5px;
+    }
+
+    input{
+        height: 30px;
     }
 }
