--- a/src/assets/Forms.scss
+++ b/src/assets/Forms.scss
@@ -29,6 +29,10 @@
     border: none;
     &:hover {
       cursor: pointer;
+      background-color: azure
+    }
+    svg{
+      z-index: -2;
     }
   }
 
@@ -52,7 +56,10 @@
     justify-content: flex-end;
     .addAdditional {
       @include defaultButton($add, $add-hover);
-      margin: 0px 5px;
+      font-size: 12px;
+      width: 100%;
+      padding: 5px;
+/*       margin: 0px 5px; */
       
     }
 
