--- a/src/assets/Preview.scss
+++ b/src/assets/Preview.scss
@@ -6,7 +6,7 @@ li {
 /* @include borderBox(); */
 
 .cv {
-  
+  //single-line spacing defined as 120% of largest font-size?
   border: solid black 1px;
   border-radius: 10px;
   background-color: white;
