--- a/src/assets/App.scss
+++ b/src/assets/App.scss
@@ -55,7 +55,7 @@ body {
     grid-column-start: 3;
     grid-column-end: 6;
     grid-row: 2/10;
-    margin-top: 22px;
+/*     margin-top: 22px; */
     /*     grid-column-end: 6; */
     .CV_Wrapper {
        overflow: scroll; 
