--- a/src/assets/Preview.scss
+++ b/src/assets/Preview.scss
@@ -37,7 +37,7 @@ li {
       flex-flow: column;
       justify-content: center;
       h4 {
-        padding: 0;
+        padding: .2em;
         margin: 5px 0;
       }
 
@@ -69,6 +69,7 @@ li {
     }
     .job_company {
       font-weight: bold;
+      margin-bottom: .5em;
     }
     .job_Role {
       list-style: disc;
@@ -76,7 +77,7 @@ li {
     }
     ul{
       li{
-        
+        padding: .2em;
       }
     }
   }
@@ -89,6 +90,7 @@ li {
       font-weight: normal;
       font-size: 1em;
       list-style: disc;
+      padding: .2em;
       span {
         font-size: 1em;
       }
@@ -108,6 +110,7 @@ li {
 }
 
 .sectionHeadings {
+  padding: .2em;
   font-size: 1.1em;
   font-weight: bold;
   width: 100%;
